# atari-jax

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
atarax/: __init__.py  _compile.py  envs.py  game.py  make.py  mechanics.py  render.py  spec.py  state.py
atarax/core/: __init__.py  bus.py  cart.py  frame.py  mechanics.py  riot.py  state.py  tia.py
atarax/env/: __init__.py  _compile.py  _kernels.py  atari_env.py  env.py  hud.py  make.py  registry.py  spec.py  vec_env.py
atarax/games/: __init__.py  _base.py  alien.py  amidar.py  assault.py  asterix.py  asteroids.py  atlantis.py  bank_heist.py  base.py  battle_zone.py  beam_rider.py  berzerk.py  bowling.py  boxing.py  breakout.py  centipede.py  chopper_command.py  crazy_climber.py  defender.py  demon_attack.py  double_dunk.py  enduro.py  fishing_derby.py  freeway.py  frostbite.py  gopher.py  gravitar.py  hero.py  ice_hockey.py  jamesbond.py  kangaroo.py  krull.py  kung_fu_master.py  montezuma_revenge.py  ms_pacman.py  name_this_game.py  phoenix.py  pitfall.py  pong.py  (+21 more)
atarax/utils/: __init__.py  preprocess.py  render.py  rom_loader.py
atarax/wrappers/: __init__.py  atari_preprocessing.py  episodic_life.py  jit_wrapper.py
atari_jax/: __init__.py
atari_jax/core/: __init__.py  bus.py  cart.py  frame.py  riot.py  state.py  tia.py
atari_jax/env/: __init__.py  _compile.py  atari_env.py  make.py  spaces.py  vec_env.py
atari_jax/games/: __init__.py  base.py  registry.py
atari_jax/utils/: __init__.py  (+2 more)
benchmarks/: bench_single_env.py  bench_vec_all_games.py  bench_vmap.py  check_parity.py
docs/: README.md  architecture.md  fidelity_testing.md
scripts/: calibrate_fidelity.py  generate_compare_gifs.py  generate_screenshots.py
tests/: conftest.py  test_breakout.py  test_core_smoke.py  test_parity.py  test_tia.py
(+284 files in other folders)
