[project]
name = "atarax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["chex>=0.1.91", "jax>=0.9.0.1", "ale-py>=0.11.2"]

[dependency-groups]
test = ["pygame>=2.6.1", "pytest>=9.0.2", "pytest-xdist>=3.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atarax"]

[tool.uv]
exclude-dependencies = ["uvloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv"]
addopts = "-n auto"
